test/errors/type/collections/set/__len.yasl
echo mt.lookup(collections.set(), .__len)(1)
